Fixed alignment

--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body {
     flex-direction: column;
     background-color: rgb(15, 15, 15);
     color: #FFF;
+    text-align: center;
 }
 
 img {
@@ -55,7 +56,7 @@ img {
 a {
     background-color: #000;
     padding: 20px;
-    margin-top: 10px;
+    margin: 10 0;
     border: 1px solid white;
     text-decoration: none;
     color: #F00;
